fixed name wrap as well as athlete still available

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,9 +37,14 @@ border: 2px solid yellow;
     position: absolute;
     top: 50%;
      transform:  translateX(-50%) translateY(-50%) rotate(-90deg);
+} 
+.noWrapName{
+  white-space: nowrap;
 }
 .team-bg{
   flex: none;
+  border-radius: 10px;
+  border: 1px solid yellow;
   background-color: yellow;
 }
 
